--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/x-icon" href="./images/favicon-32x32.png">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <img src="/images/image-qr-code.png" alt="" class="qr">
+      <img src="./images/image-qr-code.png" alt="" class="qr">
       <p class="title">Improve your front-end skills by building projects</p>
       <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to next level</p>
     </div>
